Add tiny std library and auto-generate the kernel header bindings used by it
This requires building rust-bindgen (and it's dependency syntex-syntax) for
generating kernel headers on the fly. While this is pretty slow for the initial
build, it is unfortunately necessary to make use of the kernel's API stability
guarantees (or rather missing guarantees):
Kernel data structure field members and ordering can change between minor
versions or even when enabling/disabling kernel configuration parameters with
the exact same kernel code base. Writing meaningful, stable ABI bindings isn't
really feasable under these conditions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ crate-type = ["staticlib"]
 [dependencies.core]
 git = "https://github.com/phil-opp/nightly-libcore.git"
 features = ["disable_float"]
+
+[dependencies.linux-std]
+path = "std"
