--- a/std/Cargo.toml
+++ b/std/Cargo.toml
@@ -6,5 +6,5 @@ version = "0.1.0"
 build = "build.rs"
 
 [build-dependencies]
-bindgen = {git = "https://github.com/alexander255/rust-bindgen.git"}
-shlex   = "0.1.*"
+bindgen = "0.46"
+shlex   = "0.1"
